<resources>
    <string name="app_name">FirstAcdProject</string>
    <string name="name_of_first_team">Name of first team</string>
    <string name="name_second_team">Name second team</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="plus">+</string>
    <string name="minus">—</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="continue_text">Continue</string>
    <string name="title_list_of_game">List of game sorted by descending order</string>
    <string name="share">Share</string>

    <string name="score_of_game">%1$d : %2$d</string>
    <string name="stop_game">Stop game</string>
    <string name="clean_all_list">CLEAN ALL LIST</string>
    <string name="vs_photo">vs_photo</string>
    <string name="show_game_list">Show game list</string>
    <string name="start_match">Start match</string>
    <string name="share_result">Share result</string>
    <string name="start_new_game">Start new game</string>
    <string name="show_all_game">Show all game</string>
    <string name="are_you_sure_you_want_to_stop_the_game">Are you sure you want to stop the game?</string>
    <string name="attention">Attention</string>
</resources>