<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".GamingActivity">

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="@dimen/activity_game_btn_cancel_margin_start_top"
        android:layout_marginTop="@dimen/activity_game_btn_cancel_margin_start_top"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/activity_game_tv_time_margin_top"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="@dimen/activity_game_tv_time_textSize"
        tools:text="00:00:00" />

    <Button
        android:id="@+id/btn_pause_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_game_btn_pause_textSize"
        android:text="@string/pause"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_game_tv_score_margin_vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_score_first_team"
            style="@style/TextStyleForScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/zero" />

        <TextView
            style="@style/TextStyleForScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_game_tv_scoreSeparator_paddingHorizontal"
            android:text="@string/colon" />

        <TextView
            android:id="@+id/tv_score_second_team"
            style="@style/TextStyleForScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_game_tv_teamNames_marginVertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_first_team_name"
            style="@style/TextStyleForTeamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="First team" />

        <TextView
            android:id="@+id/tv_second_team_name"
            style="@style/TextStyleForTeamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="Second team" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_game_btn_points_margin_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_plus_point_to_first_team"
            style="@style/TextStyleForButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_game_btn_point_margin_horizontal"
            android:layout_weight="1"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btn_plus_point_to_second_team"
            style="@style/TextStyleForButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_game_btn_points_margin_horizontal"
            android:layout_weight="1"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_game_btn_points_margin_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_minus_point_to_first_team"
            style="@style/TextStyleForButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_game_btn_points_margin_horizontal"
            android:layout_weight="1"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btn_minus_point_to_second_team"
            style="@style/TextStyleForButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_game_btn_points_margin_horizontal"
            android:layout_weight="1"
            android:text="@string/minus" />
    </LinearLayout>

</LinearLayout>