<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_ball"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_main_til_teamName_marginHorizontal"
        android:layout_marginTop="@dimen/activity_main_til_firstTeamName_marginTop"
        android:hint="@string/name_of_first_team"
        android:padding="@dimen/activity_main_til_teamName_padding"
        android:textColorHint="@color/red_t_short"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/activity_main_til_teamName_strokeWidth"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:hintTextAppearance="@style/MyTextAppearanceStyle"
        app:hintTextColor="@color/red_t_short"
        app:prefixText="Home: "
        app:prefixTextColor="@color/red_t_short">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/te_first_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"
            android:maxLength="15"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_main_tiet_teamName_textSize"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/vs_photo"
        android:scaleType="fitCenter"
        android:src="@drawable/vs" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_main_til_teamName_marginHorizontal"
        android:hint="@string/name_second_team"
        android:padding="@dimen/activity_main_til_teamName_padding"
        android:textColorHint="@color/yellow_t_short"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/activity_main_til_teamName_strokeWidth"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:hintTextAppearance="@style/MyTextAppearanceStyle"
        app:hintTextColor="@color/yellow_t_short"
        app:prefixText="Visitor: "
        app:prefixTextColor="@color/yellow_t_short">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/te_second_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"
            android:maxLength="15"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_main_tiet_teamName_textSize"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top|center"
        android:theme="@style/TimePickerTheme"
        android:timePickerMode="spinner" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_game_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="40dp"
            android:minHeight="@dimen/activity_main_btn_minHeight"
            android:text="@string/show_game_list" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="40dp"
            android:enabled="false"
            android:minHeight="@dimen/activity_main_btn_minHeight"
            android:text="@string/start_match" />
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>